--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         Mines left : <span data-mine-count></span>
     </div>
     <div class="board"></div>
+    <button id="reload">Restart Game</button>
     
 </body>
 </html>
